[BUGFIX] Fancybox jump totop

--- a/fileadmin/templates/example.com/Css/styles.css
+++ b/fileadmin/templates/example.com/Css/styles.css
@@ -264,7 +264,7 @@ footer.pagefooter {
 	width: auto;
 }
 .fancybox-lock body {
-	overflow: hidden !important;
+	overflow: visible !important;
 }
 .fancybox-lock-test {
 	overflow-y: hidden !important;
